--- a/Client/ShaderFrameWork/ShaderFrameWork.Plugins.csproj
+++ b/Client/ShaderFrameWork/ShaderFrameWork.Plugins.csproj
@@ -443,9 +443,15 @@
     <None Include="Assets\Alloy\Shaders\Unity\AutoLight.cginc" />
     <None Include="Assets\Alloy\Shaders\Unity\UnityCG.cginc" />
     <None Include="Assets\Alloy\Shaders\Unity\UnityPBSLighting.cginc" />
+    <None Include="Assets\MSF\ReferenceShaders\ManewPBR\Anisotropic.shader" />
+    <None Include="Assets\MSF\ReferenceShaders\ManewPBR\BrushMetallic.shader" />
     <None Include="Assets\MSF\ReferenceShaders\ManewPBR\Cook-Torrance.shader" />
-    <None Include="Assets\MSF\ReferenceShaders\ManewPBR\Desnity_Cook-Torrance.shader" />
+    <None Include="Assets\MSF\ReferenceShaders\ManewPBR\Disney_Cook-Torrance.shader" />
+    <None Include="Assets\MSF\ReferenceShaders\ManewPBR\LegacyBumpVF.shader" />
     <None Include="Assets\MSF\ReferenceShaders\ManewPBR\LegacyVF.shader" />
+    <None Include="Assets\MSF\ReferenceShaders\ManewPBR\SoftMetal.shader" />
+    <None Include="Assets\MSF\ReferenceShaders\ManewPBR\SoftMetal_Tex.shader" />
+    <None Include="Assets\MSF\ReferenceShaders\ManewPBR\Ward.shader" />
     <None Include="Assets\MSF\ReferenceShaders\MoveShaders\01_Lambert.shader" />
     <None Include="Assets\MSF\ReferenceShaders\MoveShaders\02_DisneyDiffuse.shader" />
     <None Include="Assets\MSF\ReferenceShaders\MoveShaders\03_BlinnPhong.shader" />
@@ -465,6 +471,12 @@
     <None Include="Assets\MSF\Shaders\PBR_Multi_BRDF.shader" />
     <None Include="Assets\MSF\Shaders\Shader_Test 1.shader" />
     <None Include="Assets\MSF\Shaders\Shader_Test.shader" />
+    <None Include="Assets\MoveStandardShader\Shaders\CGIncludes\Move_StandardCore.cginc" />
+    <None Include="Assets\MoveStandardShader\Shaders\CGIncludes\Move_StandardCoreForward.cginc" />
+    <None Include="Assets\MoveStandardShader\Shaders\CGIncludes\Move_StandardCoreForwardSimple.cginc" />
+    <None Include="Assets\MoveStandardShader\Shaders\Move_Standard.shader" />
+    <None Include="Assets\MoveStandardShader\Shaders\Move_StandardRoughness.shader" />
+    <None Include="Assets\MoveStandardShader\Shaders\Move_StandardSpecular.shader" />
     <None Include="Assets\Note.txt" />
     <None Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Bloom\Resources\Bloom.cginc" />
     <None Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Bloom\Resources\Bloom.shader" />
