--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ obj
 UBER
 Standard Assets
 LocalRes
+PostProcessing
 ##############################
 ## Netbeans conf            ##
 ##############################
@@ -15,3 +16,4 @@ nbactions.xml
 UBER.meta
 LocalRes.meta
 Standard Assets.meta
+PostProcessing.meta
